# UGMathBench-VariantLYC

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.data/: Abstract_algebra.json  Algebra.json  Arithmetic.json  Calculus_-_multivariable.json  Calculus_-_single_variable.json  Combinatorics.json  Complex_analysis.json  Differential_equations.json  Financial_mathematics.json  Geometry.json  Linear_algebra.json  Number_theory.json  Probability.json  Set_theory_and_logic.json  Statistics.json  Trigonometry.json  judge_prompt_v3.txt
ugmb/: __init__.py  eval_marj.py  eval_rule.py  generate.py  judge_marj.py  judge_rule.py  utils.py
